replaced cell that collects ids. New cell does less work for the same effect and is more pythonic.

--- a/Project-1-Sequencing/Master Notebook/Master notebook H1N1 project.ipynb
+++ b/Project-1-Sequencing/Master Notebook/Master notebook H1N1 project.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:597b6f5ae3b5f41f6f16f80de1bdf49f2d54310d485b15fae51c370f2957f753"
+  "signature": "sha256:57ca632f7133e726371f55058d87f85f68e9b4e86b619c4ac00d346b9fce9861"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -69,9 +69,13 @@
       "#Make sure you are in the same directory as the sequence FASTA files"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -94,7 +98,11 @@
       "    genomes['s%i'%(years[year])] = list(SeqIO.parse('swine_%i_FASTA.fa'%(years[year]), 'fasta'))"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 2
     },
@@ -113,7 +121,11 @@
       "    genomes['s%i_all'%(years[year])].id = 's' + str(years[year])"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 3
     },
@@ -138,7 +150,11 @@
       "SeqIO.write(all_seq,'all_seq.fa','fasta');"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 4
     },
@@ -153,7 +169,11 @@
       "\"\"\""
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": []
     },
     {
@@ -167,7 +187,11 @@
       "\"\"\""
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": []
     },
     {
@@ -181,7 +205,11 @@
       "\"\"\""
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": []
     },
     {
@@ -194,7 +222,11 @@
       "print all_aln"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [
       {
        "output_type": "stream",
@@ -212,19 +244,30 @@
        ]
       }
      ],
-     "prompt_number": 4
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "h_ids = [all_aln[i].id for i in range(0,4)]\n",
-      "s_ids = [all_aln[i].id for i in range(4,8)]\n",
-      "all_ids = [all_aln[i].id for i in range(len(all_aln))]"
+      "#collect ids and separate based on host (letter prefex preceding the year)\n",
+      "all_ids = [alignment.id for alignment in all_aln]\n",
+      "h_ids = all_ids[:4]\n",
+      "s_ids = all_ids[4:]\n",
+      "print all_ids,'\\n', h_ids, s_ids"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['h1935', 'h1978', 'h2009', 'h2014', 's1935', 's1978', 's2009', 's2014'] \n",
+        "['h1935', 'h1978', 'h2009', 'h2014'] ['s1935', 's1978', 's2009', 's2014']\n"
+       ]
+      }
+     ],
      "prompt_number": 5
     },
     {
@@ -257,7 +300,11 @@
       "    track_count += 1"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 6
     },
@@ -284,7 +331,11 @@
       "    return diff_locations"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 7
     },
@@ -303,7 +354,11 @@
       "        diffs['h_%i_s_%i'% (years[i],years[ii])] = get_diff_locations(all_aln[i].seq,all_aln[ii+4].seq)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 8
     },
@@ -319,7 +374,11 @@
       "                                   name = 'Swine: 1935 (reference)', label=True, label_angle=0);"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 9
     },
@@ -345,7 +404,11 @@
       "    s_feature_set['s1978'].add_feature(feature, color=colors.blue)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 10
     },
@@ -370,7 +433,11 @@
       "    s_feature_set['s2009'].add_feature(feature, color=colors.blue)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 11
     },
@@ -395,7 +462,11 @@
       "    s_feature_set['s2014'].add_feature(feature, color=colors.blue)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 12
     },
@@ -415,7 +486,11 @@
       "s_tracks_im = mpimg.imread('s_tracks.png');"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 13
     },
@@ -458,7 +533,11 @@
       "plt.imshow(s_tracks_im);\n"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -535,7 +614,11 @@
       "\n"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -611,7 +694,11 @@
       "plt.imshow(s_1978_2009_track_im);"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -652,7 +739,11 @@
       "hs_feature_set2014 = hs_features2014.new_set()"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 17
     },
@@ -694,7 +785,11 @@
       "    hs_feature_set2014.add_feature(feature, color=colors.blue)"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 18
     },
@@ -709,7 +804,11 @@
       "hs_tracks_im = mpimg.imread('hs_tracks.png');"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [],
      "prompt_number": 19
     },
@@ -739,7 +838,11 @@
       "plt.imshow(hs_tracks_im);"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -791,7 +894,11 @@
       "plt.legend(loc='best');"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -828,7 +935,11 @@
       "plt.legend(loc='best');"
      ],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": [
       {
        "metadata": {},
@@ -867,7 +978,11 @@
      "collapsed": false,
      "input": [],
      "language": "python",
-     "metadata": {},
+     "metadata": {
+      "run_control": {
+       "read_only": false
+      }
+     },
      "outputs": []
     }
    ],
