added functions for creating and plotting track diagrams.

--- a/Project-1-Sequencing/Master Notebook/Master notebook H1N1 project.ipynb
+++ b/Project-1-Sequencing/Master Notebook/Master notebook H1N1 project.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:57ca632f7133e726371f55058d87f85f68e9b4e86b619c4ac00d346b9fce9861"
+  "signature": "sha256:dee8384acafa8be8293c3b1fa44163ef0cd3ae6fec652d137a28b0b8c4cf1786"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -320,15 +320,103 @@
       "    if len(ref) != len(compare):\n",
       "        raise ValueError('Seqs are not the same length!')\n",
       "    \n",
-      "    diff_locations = [0]\n",
+      "    diff_locations = []\n",
       "    \n",
       "    for i in range(len(ref)):\n",
       "        if ref[i] != compare[i]:\n",
       "            diff_locations.append(i)\n",
+      "        \n",
+      "    return diff_locations\n",
+      "\n",
+      "def setup(diagram_name, ids, length):\n",
+      "    '''\n",
+      "    Inits empty track diagram (with diagram_name as title), tracks, and feature sets for all ids.\n",
+      "    Adds bright green bg to each track (for contrast).\n",
+      "    Returns tracks, features, and feature_sets.\n",
+      "    '''\n",
+      "    #Create Genome Diagram for human\n",
+      "    track_diagram = GenomeDiagram.Diagram(diagram_name+' H1N1 Tracks Plot', tracklines = 0)\n",
+      "\n",
+      "    track = {}\n",
+      "    feature_set = {}\n",
+      "\n",
+      "    #Generate tracks and feature sets for each year\n",
+      "    track_count = 1\n",
+      "    for i in ids: \n",
+      "        track['%s' %i] = track_diagram.new_track(track_count, name=i, greytrack=False)#greytrack=True, \n",
+      "                                                 #greytrack_labels=1, greytrack_fontcolor = colors.cornsilk,\n",
+      "                                                 #greytrack_fontsize=15)\n",
+      "        \n",
+      "        feature_set['%s'%i] = track['%s' %i].new_set(name=i)\n",
+      "        \n",
+      "        #add contrast background\n",
+      "        feature_set['%s'%i].add_feature(SeqFeature(FeatureLocation(0,length)), \n",
+      "                                   label=True, label_angle=0, color=colors.cadetblue)\n",
+      "        track_count += 1\n",
+      "    return track_diagram, track, feature_set\n",
+      "\n",
+      "def add_features_year_compare(feature_set, diffs, hostspecies, base_year):\n",
+      "    for k, features in feature_set.items():\n",
+      "        year = k[1:]\n",
+      "        if base_year in k:\n",
+      "            #if the base year...\n",
+      "            label = '%s: %s (reference)'%(hostspecies,year)\n",
+      "\n",
+      "        else:\n",
+      "            #name bg feature (which labels the track)\n",
+      "            label ='%s: %s --- %i differences vs. %s'%(hostspecies, year, len(diffs[k]), base_year)\n",
+      "            # For each difference recorded in diffs, add as a feature to feature_set\n",
+      "            for i in diffs[k]:\n",
+      "                feature = SeqFeature(FeatureLocation(i,i))\n",
+      "                features.add_feature(feature, name=label, color=colors.aqua)\n",
+      "                \n",
+      "        # set the name of the first feature (the background feature) to label\n",
+      "        # this is stupid, but I'm not sure how to do it better\n",
+      "        features.get_features()[0].name = label \n",
+      "         \n",
+      "def compare_strains_by_host(diffs):\n",
+      "    #Create Genome Diagram to compare human and swine in each year\n",
+      "    diagram = GenomeDiagram.Diagram('Human vs. Swine H1N1 Tracks Plot')\n",
+      "    tracks = {}\n",
+      "    feature_set = {}\n",
       "    \n",
-      "    del diff_locations[0]\n",
+      "    for n,(k,v) in enumerate(diffs.iteritems(),1):\n",
+      "        tracks[k] = diagram.new_track(n, greytrack=False)\n",
+      "        feature_set[k] = tracks[k].new_set()\n",
+      "    return diagram, tracks, feature_set\n",
+      "\n",
+      "def add_features_host_compare(feature_set):\n",
+      "    for k,v in feature_set.iteritems():\n",
+      "        feature_set[k].add_feature(SeqFeature(FeatureLocation(0,13378)), \n",
+      "                                       name = 'Human vs. Swine: %s --- %i differences'%(k,len(diffs[k])), \n",
+      "                                       label=True, label_angle=0, color=colors.cadetblue)\n",
+      "        for i in diffs[k]:\n",
+      "            feature = SeqFeature(FeatureLocation(i,i))\n",
+      "            feature_set[k].add_feature(feature, color=colors.aqua)\n",
+      "\n",
+      "def plot_tracks(tracks,tracks_path):\n",
+      "    '''\n",
+      "    Save tracks as pngs, then load them as images and display with matplotlib.\n",
+      "    '''\n",
       "    \n",
-      "    return diff_locations"
+      "    #Write each diagram to a png, then read it back in using Matplotlib\n",
+      "    tracks.draw(format='linear', pagesize=(14*cm,7*cm), fragments=1,\n",
+      "             start=0, end=13378)\n",
+      "    plt.show()\n",
+      "    #get extension from tracks path\n",
+      "    root, ext = os.path.splitext(tracks_path)\n",
+      "    if not ext:\n",
+      "        ext = '.png'\n",
+      "        tracks_path += ext\n",
+      "\n",
+      "    tracks.write(tracks_path, ext.strip('.'), dpi=600)\n",
+      "    tracks_im = mpimg.imread(tracks_path)\n",
+      "\n",
+      "    #Plot each set of tracks\n",
+      "    fig = plt.figure(figsize=(14,7),dpi=600)\n",
+      "    ax = fig.add_axes([0.025,0.025,0.95,0.95],frameon=False)\n",
+      "    plt.axis('off')\n",
+      "    plt.imshow(tracks_im)"
      ],
      "language": "python",
      "metadata": {
