--- a/Project-1-Sequencing/Master Notebook/Master notebook H1N1 project.ipynb
+++ b/Project-1-Sequencing/Master Notebook/Master notebook H1N1 project.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b8656c28b848bcfec051e0cd19c2324b2779cdb31ff842ea6fc1029fe0c0a701"
+  "signature": "sha256:3cc8a7e03abd9b5b747afef24cae7fbec6f3fba60412b7c5272ccc9d3fe65164"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -1023,6 +1023,63 @@
       "multigroup_barchart.bar_chart(means,std,group_labels,years)\n",
       "plt.legend(loc=2)\n",
       "plt.title('Group by year')\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "mod_annotate = lambda x: heatmap.show_values(x,fmt=\"%.5f\")\n",
+      "\n",
+      "def df_from_2_key_dict(twokey_dict):\n",
+      "\n",
+      "    temp ={}\n",
+      "    for k,v in twokey_dict.iteritems():\n",
+      "        #v is row value, k is row label\n",
+      "        k1 = k[0]\n",
+      "        k2 = k[1]\n",
+      "        try:\n",
+      "            #append to current sub-dict\n",
+      "            temp[k1][k2] = v\n",
+      "        except:\n",
+      "            #start new sub-dict\n",
+      "            temp[k1] = {}\n",
+      "            temp[k1][k2] = v\n",
+      "\n",
+      "    return pd.DataFrame.from_dict(temp)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 14
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Swine\n",
+      "compare = df_from_2_key_dict(sd).fillna(0)\n",
+      "plot,bar = heatmap.heatmap_from_dataframe(compare, annotate_function=mod_annotate)\n",
+      "plt.title('Distance between each node of the Phylogenic Tree \\n(Swine)')\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "#Human\n",
+      "compare = df_from_2_key_dict(hd).fillna(0)\n",
+      "mod_annotate = lambda x: heatmap.show_values(x,fmt=\"%.5f\")\n",
+      "plot,bar = heatmap.heatmap_from_dataframe(compare, annotate_function=mod_annotate)\n",
+      "plt.title('Distance between each node of the Phylogenic Tree \\n(Human)')\n",
       "plt.show()"
      ],
      "language": "python",
