Added conclusions, updated references, and wrote a title
If anyone can think of a better title, please use it instead of mine.

--- a/Project-1-Sequencing/Master Notebook/Master notebook H1N1 project.ipynb
+++ b/Project-1-Sequencing/Master Notebook/Master notebook H1N1 project.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3cc8a7e03abd9b5b747afef24cae7fbec6f3fba60412b7c5272ccc9d3fe65164"
+  "signature": "sha256:bc8e3c185aff625380ab2f3fb6df822589671d7e059726b7f10b770181c7ad83"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -13,7 +13,7 @@
      "level": 1,
      "metadata": {},
      "source": [
-      "TITLE: "
+      "Rate of Change in Influenza A Virus Sequence Found Human and Swine Hosts"
      ]
     },
     {
@@ -60,6 +60,8 @@
       "import matplotlib.image as mpimg\n",
       "import heatmap\n",
       "import multigroup_barchart\n",
+      "import numpy as np\n",
+      "import pandas as pd\n",
       "\n",
       "%matplotlib inline\n",
       "\n",
@@ -1054,8 +1056,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -1091,6 +1092,21 @@
      "level": 2,
      "metadata": {},
      "source": [
+      "Conclusions"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "The rate of change of the influenza A virus is different between humans and swine, but the rate is not constant within the host. At different years the rate of change for IAV was faster in pigs, from 1935 to 1978, having 1206 changes compared to 850 changes for IAV found in humans in the same years.  Nonetheless difference rates are not always higher for IAV in swine, in the year 1978 to 2009 the IAV had 2323 changes in humans compared to 1846 differences found in swine. The differences in rate of change in IAV sequences found in swine might be explained by the changes in modern pig farming. The housing of pigs from out door pens to multi-level closed infrastructure and the increase in animals farmed at any one time have contributed to the increase potential of transmitting IAV among the farmed pigs {Looker:2003}.  By increasing the number of hosts available in a single IAV infection, the number of changes increases therefore increasing the rate in which the IAV sequence changes. "
+     ]
+    },
+    {
+     "cell_type": "heading",
+     "level": 2,
+     "metadata": {},
+     "source": [
       "References "
      ]
     },
@@ -1099,6 +1115,8 @@
      "metadata": {},
      "source": [
       "Goka, E. A., Vallely, P. J., Mutton, K. J. & Klapper, P. E. (2014). Mutations associated with severity of the pandemic influenza A(H1N1)pdm09 in humans: a systematic review and meta-analysis of epidemiological evidence. Arch Virol 159, 3167\u20133183.\n",
+      "\n",
+      "Looker, Dan. \"Pig.\"\u00a0Encyclopedia of Food and Culture. 2003. Retrieved May 14, 2015 from Encyclopedia.com:http://www.encyclopedia.com/doc/1G2-3403400477.html\n",
       "\n",
       "Nelson, M. I. & Vincent, A. L. (2015). Reverse zoonosis of influenza to swine: new perspectives on the human\u2013animal interface. Trends Microbiol 23, 142\u2013153. Elsevier Ltd.\n",
       "\n",
